# libcanfix

./: .gitignore  CMakeLists.txt  Doxyfile  README.rst
doc/: manual.tex
src/: CMakeLists.txt  canfix.c  canfix.h
tests/: CMakeLists.txt  can.c  can.h  dummy.c  test.c
tests/switch_node/: CMakeLists.txt  config.c  main.c
tests/test_node/: CMakeLists.txt  main.c
